--- a/css/style.css
+++ b/css/style.css
@@ -686,34 +686,28 @@ margin-bottom: 0.5rem;
     justify-content: center;
     text-align: center;
     width: 50%;
-    height: 10rem;
-    border-top-right-radius: 6px;
-    border-bottom-right-radius: 6px;
-    background: rgb(44, 0, 0);
+    height: 8rem;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+    background: #19263d;
+    background-position: right;
+    background-size: 40%;
 }
 
-@media screen and (max-width:640px){
-    .homeTeam {
-        height: 8rem;
-    }
-}
 
 .visitorTeam {
     display: flex;
     flex-direction: row-reverse;
     justify-content: center;
     width: 50%;
-    height: 10rem;
-    border-top-left-radius: 6px;
-    border-bottom-left-radius: 6px;
-    background: rgb(0, 108, 209);
+    height: 8rem;
+    border-top-left-radius: 15px;
+    border-bottom-left-radius: 15px;
+    background: #19263d;
+    background-position: left;
+    background-size: 40%;
 }
 
-@media screen and (max-width:640px){
-    .visitorTeam {
-        height: 8rem;
-    }
-}
 
 
 .gameData {
@@ -742,15 +736,15 @@ margin-bottom: 0.5rem;
 
 @media screen and (max-width: 640px){
     .gameData p {
-        font-size: 50px;
+        font-size: 40px;
     }
 
     .homeTeamScore {
-        margin-right: 6rem;
+        margin-right: 4rem;
     }
     
     .visitorTeamScore {
-        margin-left: 6rem;
+        margin-left: 4rem;
     }
 
 
@@ -775,246 +769,246 @@ margin-bottom: 0.5rem;
 
 /*CONF EST*/
 .BOS {
-    background: #008853;
+    
     background-image: url(https://upload.wikimedia.org/wikipedia/fr/thumb/6/65/Celtics_de_Boston_logo.svg/1024px-Celtics_de_Boston_logo.svg.png);
     background-repeat: no-repeat;
-    background-position: center;
+    
     background-size: contain;
 }
 
 .MIL {
-    background: #00471b;
+    
     background-image: url(https://upload.wikimedia.org/wikipedia/fr/3/34/Bucks2015.png);
     background-repeat: no-repeat;
-    background-position: center;
-    background-size: contain;
+    
+    
 }
 
 .PHI{
-    background: #006bb8;
+   
     background-image: url(https://upload.wikimedia.org/wikipedia/fr/4/48/76ers_2016.png);
     background-repeat: no-repeat;
-    background-position: center;
-    background-size: contain;
+    
+    
 }
 
 .CLE{
-    background: #6f212f;
+   
     background-image: url(https://upload.wikimedia.org/wikipedia/fr/thumb/0/06/Cavs_de_Cleveland_logo_2017.png/150px-Cavs_de_Cleveland_logo_2017.png);
     background-repeat: no-repeat;
-    background-position: center;
+   
     background-size: contain;
 }
 
 .BKN{
-    background: rgb(39, 39, 39);
+    
     background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/4/44/Brooklyn_Nets_newlogo.svg/130px-Brooklyn_Nets_newlogo.svg.png);
     background-repeat: no-repeat;
-    background-position: center;
+    
     background-size: contain;
 }
 
 
 .MIA{
-    background: #98002e;
+    
     background-image: url(https://upload.wikimedia.org/wikipedia/fr/thumb/1/1c/Miami_Heat_-_Logo.svg/1200px-Miami_Heat_-_Logo.svg.png);
     background-repeat: no-repeat;
-    background-position: center;
+   
     background-size: contain;
 }
 
 .NYK{
-    background: #f48328;
+    
     background-image: url(https://upload.wikimedia.org/wikipedia/fr/3/34/Knicks_de_NY.png);
     background-repeat: no-repeat;
-    background-position: center;
+   
     background-size: contain;
 }
 
 .ATL{
-    background: #cc092f;
+    
     background-image: url(https://upload.wikimedia.org/wikipedia/fr/e/ee/Hawks_2016.png);
     background-repeat: no-repeat;
-    background-position: center;
+    
     background-size: contain;
 }
 
 .WAS{
-    background: rgb(255, 255, 255);
+    
     background-image: url(https://upload.wikimedia.org/wikipedia/fr/archive/d/d6/20161212034849%21Wizards2015.png);
     background-repeat: no-repeat;
-    background-position: center;
+    
     background-size: contain;
 }
 
 .TOR{
-    background: #be0f34;
+    
     background-image: url(https://upload.wikimedia.org/wikipedia/fr/8/89/Raptors2015.png);
     background-repeat: no-repeat;
-    background-position: center;
+    
     background-size: contain;
 }
 
 .CHI{
-    background: #bc032b;
+   
     background-image: url(https://upload.wikimedia.org/wikipedia/fr/thumb/d/d1/Bulls_de_Chicago_logo.svg/1200px-Bulls_de_Chicago_logo.svg.png);
     background-repeat: no-repeat;
-    background-position: center;
+   
     background-size: contain;
 }
 
 .IND {
-    background: #ffc526;
+    
     background-image: url(https://upload.wikimedia.org/wikipedia/fr/thumb/c/cf/Pacers_de_l%27Indiana_logo.svg/1180px-Pacers_de_l%27Indiana_logo.svg.png);
     background-repeat: no-repeat;
-    background-position: center;
+    
     background-size: contain;
 }
 
 .ORL{
-    background: #0075bd;
+    
     background-image: url(https://upload.wikimedia.org/wikipedia/fr/b/bd/Orlando_Magic_logo_2010.png);
     background-repeat: no-repeat;
-    background-position: center;
+    
     background-size: contain;
 }
 
 .CHA {
-    background: #1d8cab;
+    
     background-image: url(https://upload.wikimedia.org/wikipedia/fr/thumb/f/f3/Hornets_de_Charlotte_logo.svg/1200px-Hornets_de_Charlotte_logo.svg.png);
     background-repeat: no-repeat;
-    background-position: center;
+    
     background-size: contain;
 }
 
 .DET {
-    background: #002d62;
+    
     background-image: url(https://1000logos.net/wp-content/uploads/2017/08/Detroit-Pistons-logo.png);
     background-repeat: no-repeat;
-    background-position: center;
+    
     background-size: contain;
 }
 
 /*CONF OUEST*/
 .MEM {
-    background: #618abb;
+    
     background-image: url(https://upload.wikimedia.org/wikipedia/en/thumb/f/f1/Memphis_Grizzlies.svg/1200px-Memphis_Grizzlies.svg.png);
     background-repeat: no-repeat;
-    background-position: center;
+    
     background-size: contain;
 }
 
 .MIN {
-    background: #005183;
+    
     background-image: url(https://upload.wikimedia.org/wikipedia/fr/thumb/d/d9/Timberwolves_du_Minnesota_logo_2017.png/200px-Timberwolves_du_Minnesota_logo_2017.png);
     background-repeat: no-repeat;
-    background-position: center;
+    
     background-size: contain;
 }
 
 .DEN {
-    background: #00235e;
+    
     background-image: url(https://upload.wikimedia.org/wikipedia/fr/thumb/3/35/Nuggets_de_Denver_2018.png/180px-Nuggets_de_Denver_2018.png);
     background-repeat: no-repeat;
-    background-position: center;
+    
     background-size: contain;
 }
 
 .SAC {
-    background: #724c9f;
+    
     background-image: url(https://upload.wikimedia.org/wikipedia/fr/thumb/9/95/Kings_de_Sacramento_logo.svg/1200px-Kings_de_Sacramento_logo.svg.png);
     background-repeat: no-repeat;
-    background-position: center;
+    
     background-size: contain;
 }
 
 .PHX {
-    background: #27235c;
+    
     background-image: url(https://upload.wikimedia.org/wikipedia/fr/5/56/Phoenix_Suns_2013.png);
     background-repeat: no-repeat;
-    background-position: center;
+    
     background-size: contain;
 }
 
 .DAL {
-    background: #1061ac;
+    
     background-image: url(https://upload.wikimedia.org/wikipedia/fr/thumb/b/b8/Mavericks_de_Dallas_logo.svg/150px-Mavericks_de_Dallas_logo.svg.png);
     background-repeat: no-repeat;
-    background-position: center;
+    
     background-size: contain;
 }
 
 .LAC {
-    background: rgb(221, 221, 221);
+    
     background-image: url(https://upload.wikimedia.org/wikipedia/fr/d/d6/Los_Angeles_Clippers_logo_2010.png);
     background-repeat: no-repeat;
-    background-position: center;
+    
     background-size: contain;
 }
 
 
 .NOP {
-    background: #002a5c;
+    
     background-image: url(https://upload.wikimedia.org/wikipedia/fr/thumb/2/21/New_Orleans_Pelicans.png/200px-New_Orleans_Pelicans.png);
     background-repeat: no-repeat;
-    background-position: center;
+    
     background-size: contain;
 }
 
 .GSW {
-    background: #fdb927;
+    
     background-image: url(https://upload.wikimedia.org/wikipedia/fr/thumb/d/de/Warriors_de_Golden_State_logo.svg/1200px-Warriors_de_Golden_State_logo.svg.png);
     background-repeat: no-repeat;
-    background-position: center;
+    
     background-size: contain;
 }
 
 .OKC {
-    background: #f05333;
+    
     background-image: url(https://upload.wikimedia.org/wikipedia/fr/thumb/4/4f/Thunder_d%27Oklahoma_City_logo.svg/1200px-Thunder_d%27Oklahoma_City_logo.svg.png);
     background-repeat: no-repeat;
-    background-position: center;
+    
     background-size: contain;
 }
 
 .UTA {
-    background: #00471b;
+    
     background-image: url(https://upload.wikimedia.org/wikipedia/fr/3/3b/Jazz_de_l%27Utah_logo.png);
     background-repeat: no-repeat;
-    background-position: center;
+  
     background-size: contain;
 }
 
 .POR {
-    background: #d00328;
+    
     background-image: url(https://upload.wikimedia.org/wikipedia/en/thumb/2/21/Portland_Trail_Blazers_logo.svg/1200px-Portland_Trail_Blazers_logo.svg.png);
     background-repeat: no-repeat;
-    background-position: center;
+    
     background-size: contain;
 }
 
 .LAL {
-    background: #542583;
+    
     background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/3/3c/Los_Angeles_Lakers_logo.svg/220px-Los_Angeles_Lakers_logo.svg.png);
     background-repeat: no-repeat;
-    background-position: center;
+    
     background-size: contain;
 }
 
 
 .SAS {
-    background: #84888b;
+   
     background-image: url(https://upload.wikimedia.org/wikipedia/fr/0/0e/San_Antonio_Spurs_2018.png);
     background-repeat: no-repeat;
-    background-position: center;
+    
     background-size: contain;
 }
 
 .HOU {
-    background: #061922;
+    
     background-image: url(https://upload.wikimedia.org/wikipedia/fr/thumb/d/de/Houston_Rockets_logo_2003.png/330px-Houston_Rockets_logo_2003.png);
     background-repeat: no-repeat;
-    background-position: center;
+    
     background-size: contain;
     width: 50%;
 }
