--- a/css/style.css
+++ b/css/style.css
@@ -628,7 +628,6 @@ margin-bottom: 0.5rem;
 .games {
     display: flex;
     flex-direction: row;
-    
     justify-content: center;
     flex-wrap: wrap;
     margin:0.5rem 5rem 2rem 5rem ;
@@ -656,7 +655,6 @@ margin-bottom: 0.5rem;
     
     display: flex;
     flex-direction: column;
-    
     color:rgb(233, 233, 233);
     font-family: var(--main-police);
     margin: 0.5rem;
@@ -694,6 +692,12 @@ margin-bottom: 0.5rem;
     margin-right: auto;
     
 }
+
+.boxScore:hover {
+    color:var(--main-color);
+    transition: ease-in-out 0.3s;
+    
+ }
 
 @media screen and (max-width:640px){
     
@@ -774,16 +778,12 @@ margin-bottom: 0.5rem;
 }
 
 .visitorTeamNickname{
-    font-size: 12px;
-    
     margin-left: auto;
-    margin-right: 5rem;
+    margin-right: 6rem;
 }
 
 .homeTeamNickname {
-    font-size: 12px;
-
-    margin-left: 5rem;
+    margin-left: 6rem;
     margin-right: auto;
 }
 
@@ -791,7 +791,17 @@ margin-bottom: 0.5rem;
     .visitorTeamScore, .homeTeamScore {
         font-size: 40px;
     }
-
+    .visitorTeamNickname{
+        margin-left: auto;
+        margin-right: 5rem;
+        margin-top:1rem;
+    }
+    
+    .homeTeamNickname {
+        margin-left: 5rem;
+        margin-right: auto;
+        margin-top:1rem;
+    }
 
 
 }
