--- a/css/style.css
+++ b/css/style.css
@@ -51,10 +51,11 @@ body {
 }
 
 .logoHead {
-    margin-top: 1.5rem;
-    margin-left: 1rem;
+    margin-top: 0.5rem;
+    margin-left: 0.5rem;
     display: flex;
     flex-direction: row;
+    align-items: center;
     font-size: 35px;
     color: white;
 }
@@ -138,6 +139,7 @@ ul {
 
 .nba-logo {
     margin-left: 15rem;
+    margin-right: 1rem;
     width: 15rem;
     height: auto;
 }
